--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ serenity = { version = "0.11", features = ["time"] }
 tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
+dotenv = "*"
